k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
spec:
  selector:
    app: tetris
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
